# Summer24-SFT221-NGG-6

./: .gitignore  Makefile
.github/workflows/: cmake-multi-platform.yaml
Documents/: GroupContract.docx
Documents/FunctionSpecs/: function-description.docx
Documents/ScrumReports/: ms1-scrum-report.docx  ms2-scrum-report.docx  ms3-scrum-report.docx  ms4-scrum-report.docx  ms5-scrum-report.docx  ms6-scrum-report.docx  ~$4-scrum-report.docx
Documents/Testing/Test Documents/: Group 6 Test strategy.docx  acceptance-test-description.docx  final-test-report.docx  integration-test-description.docx  test-description.docx  traceability-matrix.xlsx  whitebox-blackbox-test-description.docx
Documents/Testing/TestPlan/: test-plan-group6.docx
SourceCode/: .gitignore  CMakeLists.txt  SourceCode.sln
SourceCode/Project/: Project.vcxproj  main.c  mapping.c  mapping.h  shipment.c  shipment.h  utils.c  utils.h
SourceCode/UnitTest/: AcceptanceTest.cpp  IntegrationTest.cpp  UnitTest.cpp  UnitTest.vcxproj  mapping_r.h  shipment_r.h
hookFiles/: pre-push-031676133  pre-push-113021190  pre-push-120864236  pre-push-157049222
